# SC2Helperbot

./: .coveragerc  .env.example  .env.sample  .gitignore  Makefile  README.md  commands.py  config.py.example  consts.py  example_settings.py  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  settings.py
APIs/: blizzard.py  sc2ladder.py
commands/: __init__.py  cmds.py  templates.py  utils.py
data/: None  db_access.py  db_schema.py
helpers/: blizz_API.py
sc2bot/: __main__.py  bot_response.py  commands.py  controller.py  routes.py
sc2bot/client/: __init__.py  blizzard.py  config.py  sc2_ladder.py
sc2bot/database/: config.py  data.py  helpers.py  schema.py  session.py
sc2bot/templates/: command_not_found.txt  def.txt  dsc_fetch.txt  dsc_help.txt  dsc_link.txt  dsc_register.txt  dsc_user.txt  help.txt  hlp_fetch.txt  hlp_help.txt  hlp_link.txt  hlp_register.txt  hlp_user.txt  invalid_battle_tag.txt  invalid_params.txt  invalid_sc2_url.txt  no_display_name.txt  user_info.txt  user_not_found.txt
scripts/: create_db.py  fetch_player_data.py  fetch_user_data.py
tests/: conftest.py  test_add_player.py  test_add_stats.py  test_blizzard_client.py  test_db_operation.py  test_register.py  test_retrieve_user.py  test_sc2_ladder_client.py  test_user_save.py
tests/data/: fake_battle_tag_info.json  fake_ladder_info.json  fake_ladder_info_1.json  fake_ladder_info_2.json  fake_ladder_summary.json  fake_metadata.json
